--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,35 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.body{
+    display: flex;
+    flex-wrap: wrap;
   }
-  to {
-    transform: rotate(360deg);
+  
+.img {
+  width: 100%;
+  height: 200px;
+ object-fit: cover;
+}
+
+.article {
+  flex: 1;
+  margin: 10px;
+  max-width: 400px;
+  border: 1px solid #cccccc;
+  padding: 10px;
+}
+
+@media (max-width: 600) {
+  .body{
+
+    display:block;
   }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .img {
+    height: 350px; 
   }
-}
+  .article {
+    max-width: 100%;
+    margin: 10px 0;
+  }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+ 
 }
