--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,19 @@
     display: flex;
     flex-wrap: wrap;
   }
+
+  .comment {
+   border:#d9afda;
+  margin: 10px;
+  padding: 10px;
+
+  }
   
 .img {
   width: 100%;
   height: 200px;
  object-fit: cover;
+ padding: 10px;
 }
 
 .article {
@@ -25,11 +33,12 @@
 
   .img {
     height: 350px; 
+    padding:10px;
   }
   .article {
     max-width: 100%;
     margin: 10px 0;
   }
-
- 
+  
 }
+
